--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,31 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>$MOOV – Solana’s Charging Bull</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <div class="overlay"></div>
+  <header>
+    <img src="logo.png" alt="$MOOV Logo" class="logo"/>
+  </header>
+  <main class="hero">
+    <h1>$MOOV</h1>
+    <p>Solana's Charging Bull</p>
+    <div class="ca">
+      <strong>Contract Address:</strong>
+      <span id="contract">0x123...yourCAhere</span>
+    </div>
+    <div class="socials">
+      <a href="#" id="twitter" aria-label="Twitter">
+        <img src="twitter.svg" alt="Twitter"/>
+      </a>
+      <a href="#" id="telegram" aria-label="Telegram">
+        <img src="telegram.svg" alt="Telegram"/>
+      </a>
+    </div>
+  </main>
+</body>
+</html>
